syntax = "proto3";

service BikeServiceGrpc {
  rpc GetBikeIdsOfManager (GetBikeIdsRequest) returns (GetBikeIdsResponse);
  rpc GetManagerEmailsOfBikeId (GetManagerEmailsRequest) returns (GetManagerEmailsResponse);
  rpc GetBikeReportStatistics(GetStatisticsRequest) returns (GetStatisticsResponse);
}

message GetBikeIdsRequest {
  string managerEmail = 1;
}

message GetBikeIdsResponse {
  repeated int32 bikeIds = 1;
}

message GetManagerEmailsRequest {
  int32 bikeId = 1;
}

message GetManagerEmailsResponse {
  repeated string managerEmails = 1;
}

message GetStatisticsRequest {
  string filterType = 1;
}

message GetStatisticsResponse {
  double total = 1;
  double rateCompare = 2;
}
